Added GRPC to communicate between inventory & order service

--- a/.env_example
+++ b/.env_example
@@ -3,6 +3,7 @@ ACCOUNT_DB_PORT=3307
 ACCOUNT_DB_USER=root
 ACCOUNT_DB_PASSWORD=abc123
 ACCOUNT_DB_DATABASE=BookstoreManager
+INVENTORY_GRPC_HOST=inventory-service:9000
 INVENTORY_DB_HOST=inventory-db
 INVENTORY_DB_PORT=3308
 INVENTORY_DB_USER=root
