--- a/.env_example
+++ b/.env_example
@@ -3,23 +3,29 @@ ACCOUNT_DB_PORT=3307
 ACCOUNT_DB_USER=root
 ACCOUNT_DB_PASSWORD=abc123
 ACCOUNT_DB_DATABASE=BookstoreManager
+ACCOUNT_REDIS_HOST=account-redis
+ACCOUNT_REDIS_PORT=6379
+ACCOUNT_REDIS_EXPIRE=900
 INVENTORY_GRPC_HOST=inventory-service:9000
 INVENTORY_DB_HOST=inventory-db
 INVENTORY_DB_PORT=3308
 INVENTORY_DB_USER=root
 INVENTORY_DB_PASSWORD=abc123
 INVENTORY_DB_DATABASE=Inventory
+INVENTORY_REDIS_HOST=inventory-redis
+INVENTORY_REDIS_PORT=6379
+INVENTORY_REDIS_EXPIRE=900
 ORDERS_DB_HOST=orders-db
 ORDERS_DB_PORT=3309
 ORDERS_DB_USER=root
 ORDERS_DB_PASSWORD=abc123
 ORDERS_DB_DATABASE=Orders
+ORDERS_REDIS_HOST=orders-redis
+ORDERS_REDIS_PORT=6379
+ORDERS_REDIS_EXPIRE=900
 API_GATEWAY_HOST=http://kong:8000
 SIGN_IN_URL=/auth/api/v1/signin
 CONSUMERS_HOST=http://kong:8001/consumers/
-REDIS_HOST=redis
-REDIS_PORT=6379
-REDIS_EXPIRE=900
 ENCRYPT_KEY=4z3v3d0-c0d3r_16
 LOG_FILE=../../logs
 AUTHORIZATION_TOKEN_NAME=authorizationToken
