--- a/.env_example
+++ b/.env_example
@@ -23,7 +23,7 @@ ORDERS_DB_DATABASE=Orders
 ORDERS_REDIS_HOST=orders-redis
 ORDERS_REDIS_PORT=6379
 ORDERS_REDIS_EXPIRE=900
-AMQP_SERVER_URL=message-broker:5672
+AMQP_SERVER_URL=amqp://guest:guest@message-broker:5672/
 AMQP_QUEUE_NAME=OrderQueue
 API_GATEWAY_HOST=http://kong:8000
 SIGN_IN_URL=/auth/api/v1/signin
